lib/src/test/snapshots/bpa_rs__test__reconstruct__cube.snap
---
source: lib/src/test/reconstruct.rs
expression: triangles
---
[
    Triangle(
        [
            Vec3(
                -1.0,
                -1.0,
                -1.0,
            ),
            Vec3(
                -1.0,
                1.0,
                -1.0,
            ),
            Vec3(
                1.0,
                -1.0,
                -1.0,
            ),
        ],
    ),
    Triangle(
        [
            Vec3(
                1.0,
                -1.0,
                -1.0,
            ),
            Vec3(
                -1.0,
                -1.0,
                1.0,
            ),
            Vec3(
                -1.0,
                -1.0,
                -1.0,
            ),
        ],
    ),
    Triangle(
        [
            Vec3(
                -1.0,
                -1.0,
                1.0,
            ),
            Vec3(
                -1.0,
                1.0,
                -1.0,
            ),
            Vec3(
                -1.0,
                -1.0,
                -1.0,
            ),
        ],
    ),
    Triangle(
        [
            Vec3(
                -1.0,
                -1.0,
                1.0,
            ),
            Vec3(
                -1.0,
                1.0,
                1.0,
            ),
            Vec3(
                -1.0,
                1.0,
                -1.0,
            ),
        ],
    ),
    Triangle(
        [
            Vec3(
                -1.0,
                1.0,
                1.0,
            ),
            Vec3(
                1.0,
                1.0,
                -1.0,
            ),
            Vec3(
                -1.0,
                1.0,
                -1.0,
            ),
        ],
    ),
    Triangle(
        [
            Vec3(
                1.0,
                1.0,
                -1.0,
            ),
            Vec3(
                1.0,
                -1.0,
                -1.0,
            ),
            Vec3(
                -1.0,
                1.0,
                -1.0,
            ),
        ],
    ),
    Triangle(
        [
            Vec3(
                1.0,
                1.0,
                -1.0,
            ),
            Vec3(
                1.0,
                1.0,
                1.0,
            ),
            Vec3(
                1.0,
                -1.0,
                -1.0,
            ),
        ],
    ),
    Triangle(
        [
            Vec3(
                1.0,
                1.0,
                1.0,
            ),
            Vec3(
                1.0,
                -1.0,
                1.0,
            ),
            Vec3(
                1.0,
                -1.0,
                -1.0,
            ),
        ],
    ),
    Triangle(
        [
            Vec3(
                1.0,
                -1.0,
                1.0,
            ),
            Vec3(
                -1.0,
                -1.0,
                1.0,
            ),
            Vec3(
                1.0,
                -1.0,
                -1.0,
            ),
        ],
    ),
    Triangle(
        [
            Vec3(
                1.0,
                -1.0,
                1.0,
            ),
            Vec3(
                -1.0,
                1.0,
                1.0,
            ),
            Vec3(
                -1.0,
                -1.0,
                1.0,
            ),
        ],
    ),
    Triangle(
        [
            Vec3(
                1.0,
                -1.0,
                1.0,
            ),
            Vec3(
                1.0,
                1.0,
                1.0,
            ),
            Vec3(
                -1.0,
                1.0,
                1.0,
            ),
        ],
    ),
    Triangle(
        [
            Vec3(
                1.0,
                1.0,
                1.0,
            ),
            Vec3(
                1.0,
                1.0,
                -1.0,
            ),
            Vec3(
                -1.0,
                1.0,
                1.0,
            ),
        ],
    ),
]
