lib/src/test/snapshots/bpa_rs__test__reconstruct__tetrahedron.snap
---
source: lib/src/test/reconstruct.rs
expression: triangles
---
[
    Triangle(
        [
            Vec3(
                0.0,
                1.0,
                0.0,
            ),
            Vec3(
                0.0,
                0.0,
                1.0,
            ),
            Vec3(
                1.0,
                0.0,
                0.0,
            ),
        ],
    ),
    Triangle(
        [
            Vec3(
                1.0,
                0.0,
                0.0,
            ),
            Vec3(
                0.0,
                0.0,
                0.0,
            ),
            Vec3(
                0.0,
                1.0,
                0.0,
            ),
        ],
    ),
    Triangle(
        [
            Vec3(
                0.0,
                0.0,
                0.0,
            ),
            Vec3(
                0.0,
                0.0,
                1.0,
            ),
            Vec3(
                0.0,
                1.0,
                0.0,
            ),
        ],
    ),
    Triangle(
        [
            Vec3(
                0.0,
                0.0,
                0.0,
            ),
            Vec3(
                1.0,
                0.0,
                0.0,
            ),
            Vec3(
                0.0,
                0.0,
                1.0,
            ),
        ],
    ),
]
